# qbittorrentui

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  connections.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  release.yml
qbittorrentui/: __init__.py  __main__.py  config.py  connector.py  daemon.py  debug.py  default.ini  events.py  formatters.py  main.py  misc_widgets.py  poll.py  poller.py  testing.py  windows.py
qbittorrentui/_vendored/: __init__.py  _directions.txt  attrdict.py
qbittorrentui/windows/: application.py  torrent.py  torrent_list.py
src/qbittorrentui/: __main__.py  config.py  connector.py  daemon.py  formatters.py  main.py  misc_widgets.py
src/qbittorrentui/_vendored/: attrdict.py
src/qbittorrentui/windows/: application.py  torrent.py  torrent_list.py
